feat: adds User, Auth and UserProfile
