# src/modules/auth/dto/login.dto.ts
@@ -1,0 +1,18 @@
+import { IsEmail, IsString } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class LoginDto {
+  @ApiProperty({
+    description: 'Email do usuário',
+    example: 'usuario@exemplo.com',
+  })
+  @IsEmail()
+  email: string;
+
+  @ApiProperty({
+    description: 'Senha do usuário',
+    example: 'senha123',
+  })
+  @IsString()
+  password: string;
+}
